# sipPlayground

./: CAudioPlayerWithNotification.cpp  CAudioPlayerWithNotification.h  CMakeLists.txt  CPlaybackCall.cpp  CPlaybackCall.h  CPlayerAccount.cpp  CPlayerAccount.h  CSIPPlayer.cpp  CSIPPlayer.h  IAudioPlayerCallback.h  sipPlayer.cpp  sipTestMain.cpp
asteriskConfiguration/: extensions.conf  pjsip.conf  sip.conf
